--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,13 @@
     Даны две строки. написать функцию, которая проверяет, являются ли строки анаграммами (регистр букв не имеет значения).
     <script>
         'use strict';
-        
-
+       
+    // Создаем вспомогательную функцию, возвращающую объект,
+    // в котором содержится наши сравнимаемые слова в разобранном виде и в нижнем регистре,
+    // в объекте ключами являются буквы слова, а значениями - какое количество раз 
+    // эти буквы встречаются в слове и эти объекты мы и будем сравнивать.
+    // Если символы и их количество в словвх будут равны, то это и будет анаграммой.
+    // Далее проверяем 
     function buildCharObject(str) {
         const charObj = {};
         str = str.toLowerCase().replace(/[^\w]/g);
