--- a/index6.html
+++ b/index6.html
@@ -11,41 +11,24 @@
         'use strict';
         
 
-        function getLuckyTickets() {
-	        let result = [];
+		function luckyTicket(number) {
 
-            for (let i = 1001; i <= 999999; i++) {
-		        if (isLucky(i)) {
-		        result.push(i);
-		        }
-	        }
-	
-	        return result;
-        }
+			const num = String(number).split("").map(Number);
+ 
+			const arrL = num.slice(0, num.length / 2);
+			const arrR = num.slice(num.length / 2);
 
-        function isLucky(num) {
-	        let str = normalizeNum(num);
-	
-	        let sum1 = Number(str[0]) + Number(str[1]) + Number(str[2]);
-	        let sum2 = Number(str[3]) + Number(str[4]) + Number(str[5]);
-	
-	        return sum1 == sum2;
-        }
+			const sumL = arrL.reduce(function (sum, current) {
+			return sum + current
+		}, 0);
+		const sumR = arrR.reduce(function (sum, current) {
+			return sum + current
+		}, 0);
 
-        function normalizeNum(num) {
-	        let str = String(num);
-	
-	        if (str.length == 5) {
-		        str = '0' + str;
-	        }
-	        if (str.length == 4) {
-		        str = '00' + str;
-	        }
-	
-	        return str;
-        }
-
-        console.log(getLuckyTickets());
+		console.log(sumL === sumR);
+	}
+	luckyTicket('123234');
+	luckyTicket('003012');
 
     </script>
 </body>
