--- a/index12.html
+++ b/index12.html
@@ -20,14 +20,13 @@
         'use strict';
         
 
-        function createPyramid(num) {
-            let number = '';
-
-            for (let i = 1; i <= num; i++) {
-            console.log(number += i);
+        function createPyramid() {
+            let i
+            for (i = 1; i < 10; i++) {
+                console.log(String(i).repeat(i));
             }
         }
-        console.log(createPyramid(9));
+        console.log(createPyramid());
 
     </script>
 </body>
